Button text alignment fixed.

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -54,7 +54,7 @@
 
 .Left, .Right{
     width: 300px;
-    height: 100px;
+    height: 120px;
 }
 
 .Start, .Reset{
